2013-04-25  Albert Chu <chu11@llnl.gov>

	* Support HP Proliant DL160 G8 OEM sensors.
	
2013-04-24  Albert Chu <chu11@llnl.gov>

	* ipmi-dcmi/ipmi-dcmi.c (_sensor_info_output): Fix output
	calculation errors.  (Bug location found by Michael Winiarski -
	michael dot winiarski at hp dot com).
	
2013-04-24  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/cmds/ipmi-dcmi-cmds.c: Fix null terminator on
	tmpl_dcmi_rolling_average_time_period (Recommended fix by Michael
	Winiarski - michael dot winiarski at hp dot com).
	
2013-04-18  Albert Chu <chu11@llnl.gov>

	* libipmiconsole/ipmiconsole_processing.c (_process_protocol_state_activate_payload_sent):
	Change "BMC Error" to "SOL Inuse" error message.
	
2013-04-03  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-faq.texi: Note kernel driver issue.
	
2013-03-25  Peter Volkov <pva@gentoo.org>

	* Fix out of trunk source build.

2013-03-11  Holger Liebig <holger.liebig@ts.fujitsu.com>

	* ipmi-dcmi/: Output temperature sampling period appropriately.

	* libfreeipmi/cmds/ipmi-dcmi-cmds.c: Update
	tmpl_cmd_dcmi_get_dcmi_capability_info_mandatory_platform_attributes_rs
	with newer optional fields.

2013-03-08  Albert Chu <chu11@llnl.gov>

	* Add support for Supermicro X9SCM-iiF OEM sensors/events.
	
2013-03-08  Albert Chu <chu11@llnl.gov>

	* man/ipmi-sensors.8.pre.in: Fix typo (Found by Werner Fischer).
	
2013-02-28  Anonymous <anonymous@anonymous.com>

	* libfreeipmi/sel/ipmi-sel-string-intel.c (sel_string_output_intel_event_data2_event_data3):
	Fix string overflow.
	
2013-02-21  Albert Chu <chu11@llnl.gov>

	* Add support for Supermicro X9SPU-F-0 OEM sensors/events.

	* Add support for Supermicro X9DRI-LN4F+ OEM
	interpretations (forgotten earlier).
	
2013-01-22  Albert Chu <chu11@llnl.gov>

	* bmc-config/bmc-config.c (_bmc_config),
	ipmi-pef-config/ipmi-pef-config.c (_ipmi_pef_config),
	ipmi-chassis-config/ipmi-chassis-config.c (_ipmi_chassis_config),
	ipmi-sensors-config/ipmi-sensors-config.c (_ipmi_sensors_config):